--- a/index.html
+++ b/index.html
@@ -47,11 +47,16 @@
                     <div class="bar"></div>
                 </div>
                 <ul class="menu">
-                    <li><a href="/" class="active">Home</a></li>
-                    <li><a href="blog-archive.html">Blog</a></li>
-                    <li><a href="blog-single.html">Blog Single</a></li>
-                    <li><a href="contact-us.html">Contact Us</a></li>
-                    <li><a href="get-free-strategy.html">Free Consultation</a></li>
+                    <li><a href="/" class="active">Servers <img src="./assets/slick-arrow.svg" width="8" height="10" alt="">
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Servers 1</a></li>
+                        <li><a href="#">Servers 2</a></li>
+                        <li><a href="#">Servers 3</a></li>
+                    </ul></a></li>
+                    <li><a href="blog-archive.html">Networking</a></li>
+                    <li><a href="blog-single.html">Storage</a></li>
+                    <li><a href="contact-us.html">About Us</a></li>
+                    <li><a href="get-free-strategy.html">Contact</a></li>
                 </ul>
                 <a href="" class="btn btn-primary d-none d-lg-block">Get Free Strategy</a>
             </nav>
