--- a/product.html
+++ b/product.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./assets/rackmonut-sec.css">
     <link rel="stylesheet" href="./assets/spacification-sec.css">
     <link rel="stylesheet" href="./assets/businnes-sec.css">
+    <link rel="stylesheet" href="./assets/faq.css">
     <link rel="stylesheet" href="./assets/slick-min.css">
     <link rel="stylesheet" href="./assets/slick-theme.css">
     <title>Document</title>
@@ -58,7 +59,7 @@
             </nav>
         </div>
     </header>
-    <seciton class="products-sec half-sec content-right">
+    <seciton class="products-sec faq-sec half-sec content-right">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center gap-1 fs-14 mb-3">
                 <a href="/" style="color: #676767;" class="font-neueplak-regular d-block">Home
@@ -131,17 +132,40 @@
                             <a href="#" style="background-color: #5A31F4;" class="btn btn-primary d-block">Buy with <img
                                     src="./assets/shop-pay-img.webp" width="82" height="18" alt="shop-pay-image"></a>
                         </div>
-                        <div class="d-flex flex-wrap align-items-center gap-4">
+                        <div class="d-flex flex-wrap align-items-center gap-4 mb-3">
                             <a href="#" style="text-decoration: underline;" class="text-primary d-block">More Payment
                                 Options</a>
                             <div class="d-flex align-items-center gap-1">
                                 <span style="color: #5A31F4;">Share:</span>
                                 <div style="gap: 2px;" class="d-flex">
-                                    <img src="./assets/products-twitter.svg" width="22" height="22" alt="social-icons">
-                                    <img src="./assets/products-instagram.svg" width="22" height="22" alt="social-icons">
-                                    <img src="./assets/products-facebook.svg" width="22" height="22" alt="social-icons">
-                                    <img src="./assets/products-envelop.svg" width="22" height="22" alt="social-icons">
-                                    <img src="./assets/products-youtube.svg" width="22" height="22" alt="social-icons">
+                                    <a href="#"><img src="./assets/products-twitter.svg" width="22" height="22"
+                                            alt="social-icons"></a>
+                                    <a href="#"><img src="./assets/products-instagram.svg" width="22" height="22"
+                                            alt="social-icons"></a>
+                                    <a href="#">
+                                        <img src="./assets/products-facebook.svg" width="22" height="22"
+                                            alt="social-icons">
+                                    </a>
+                                    <a href="#">
+                                        <img src="./assets/products-envelop.svg" width="22" height="22"
+                                            alt="social-icons">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion">
+                            <div class="accordion-item active">
+                                <div style="padding-right: 30px;" class="accordion-header d-flex justify-content-between align-items-center">
+                                    <div class="d-flex align-items-center gap-1"><img src="./assets/faq-icon.svg" width="22" height="20" alt="faq-icon"> <span
+                                            class="d-block">Pick
+                                            Available</span>
+                                    </div>
+                                    <img src="./assets/slick-arrow.svg" width="16" height="16" alt="">
+                                </div>
+                                <div class="accordion-content show">
+                                    <p>Pickup available at 3850 Annapolis Ln N Suite 100
+                                        <b>Usually ready in 4 hours</b>
+                                    </p>
                                 </div>
                             </div>
                         </div>
