--- a/assets/product.html
+++ b/assets/product.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/theme_styles.css">
-    <link rel="stylesheet" href="./assets/contact-form.css">
-    <link rel="stylesheet" href="./assets/excess-sec.css">
     <link rel="stylesheet" href="./assets/networking-sec.css">
-    <link rel="stylesheet" href="./assets/industry-sec.css">
-    <link rel="stylesheet" href="./assets/faq.css">
+    <link rel="stylesheet" href="./assets/hero-sec.css">
+    <link rel="stylesheet" href="./assets/storage-sec.css">
+    <link rel="stylesheet" href="./assets/contact-form.css">
+    <link rel="stylesheet" href="./assets/rackmonut-sec.css">
+    <link rel="stylesheet" href="./assets/spacification-sec.css">
     <link rel="stylesheet" href="./assets/businnes-sec.css">
+    <link rel="stylesheet" href="./assets/faq.css">
     <link rel="stylesheet" href="./assets/slick-min.css">
     <link rel="stylesheet" href="./assets/slick-theme.css">
     <title>Document</title>
@@ -197,7 +199,7 @@
                 </div>
                 <div class="col-lg-6 mb-3">
                     <img style="max-width: 565px; border-radius: 12px;" src="./assets/products-img-2.webp"
-                        class="img-fluid mx-auto d-block" width="565" height="421" alt="products-image">
+                        class="img-fluid" width="565" height="421" alt="products-image">
                 </div>
                 <div class="col-12 order-lg-2">
                     <p>Vadim Nevelskiy leads our Dell product team, and with over 1.3 million systems and
@@ -269,10 +271,10 @@
             </div>
         </div>
     </section>
-    <section class="excess-sec pb-0">
+    <section class="excess-sec">
         <div class="container">
             <div style="background-color: var(--primary-light);" class="content-wrapper">
-                <div style="max-width: 553px;" class="order-lg-2">
+                <div>
                     <h2 class="main-title">We buy your Excess Hardware</h2>
                     <p>Do you have equipment to trade in - we can offer cash or apply that as credit towards other
                         purchases.</p>
@@ -280,21 +282,20 @@
                     <a style="text-decoration: underline;" href="mailto:buyers@altatechnologies.com"
                         class="btn btn-primary d-block">buyers@altatechnologies.com</a>
                 </div>
-                <div class="order-lg-1">
-                    <img style="max-width: 316px;" src="./assets/products-img-3.webp" class="img-fluid mx-auto d-block"
-                        width="316" height="291" alt="products-image-3">
+                <div>
+                    <img src="./assets/products-img-3.webp" width="316" height="291" alt="products-image-3">
                 </div>
             </div>
         </div>
     </section>
-    <section class="networking-sec">
+    <section style="background-color: var(--primary-light);" class="networking-sec">
         <div class="container">
             <div class="row g-3">
                 <div class="col-lg-6">
                     <span class="h2 d-block text-center mb-3">What They Say</span>
                     <div class="reviews-slider">
                         <div class="slick-items">
-                            <div style="background-color: var(--primary-light);" class="card">
+                            <div class="card">
                                 <span class="d-block fs-18 font-neueplak-semibold mb-1">Huge Inventory</span>
                                 <p>"Aisles and aisles of servers & IT equipment. Experts at what they do."</p>
                                 <div class="client-info d-flex gap-2">
@@ -318,7 +319,7 @@
                             </div>
                         </div>
                         <div class="slick-items">
-                            <div style="background-color: var(--primary-light);" class="card">
+                            <div class="card">
                                 <span class="d-block fs-18 font-neueplak-semibold mb-1">Huge Inventory</span>
                                 <p>"Aisles and aisles of servers & IT equipment. Experts at what they do."</p>
                                 <div class="client-info d-flex gap-2">
@@ -342,7 +343,7 @@
                             </div>
                         </div>
                         <div class="slick-items">
-                            <div style="background-color: var(--primary-light);" class="card">
+                            <div class="card">
                                 <span class="d-block fs-18 font-neueplak-semibold mb-1">Huge Inventory</span>
                                 <p>"Aisles and aisles of servers & IT equipment. Experts at what they do."</p>
                                 <div class="client-info d-flex gap-2">
@@ -386,98 +387,114 @@
             </div>
         </div>
     </section>
-    <section style="background-color: var(--gray-light);" class="industry-sec">
+    <section class="storage-sec pb-0">
         <div class="container">
-            <h2 class="main-title text-center mb-5">Proud to Partner with These Industry Giants</h2>
-            <div class="sliderbar">
-                <div class="logo-slider">
-                    <img src="./assets/industry-icon-1.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-2.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-3.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-4.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-5.webp" width="154" height="130" alt="industry-logo">
+            <div class="row g-3">
+                <div class="col-lg-6">
+                    <div class="image-wrapper">
+                        <img src="./assets/storage-image-left.webp" class="d-block mx-auto img-fluid"
+                            style="max-width: 595px;" width="595" height="517" alt="">
+                    </div>
                 </div>
-                <div class="logo-slider">
-                    <img src="./assets/industry-icon-1.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-2.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-3.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-4.webp" width="154" height="130" alt="industry-logo">
-                    <img src="./assets/industry-icon-5.webp" width="154" height="130" alt="industry-logo">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="half-sec content-left pb-0">
-        <div class="container">
-            <div class="row gy-lg-0 gy-3">
-                <div class="col-lg-6 order-lg-2">
+                <div class="col-lg-6">
                     <div class="content-wrapper">
-                        <h2 class="main-title">Over 1.3 Million Parts!</h2>
-                        <p>Established in 1995, Alta Technologies has become one of the largest suppliers of enterprise
-                            IT equipment - from configured systems to features and upgrades. We have it in stock!</p>
-                        <div class="d-flex gap-1 mb-2">
-                            <img src="./assets/products-icon-1.svg" class="d-block" width="34" height="33"
-                                alt="products-icon">
-                            <div>
-                                <span class="d-block fs-18 font-neueplak-semibold">Fully-Tested:</span>
-                                <p class="mb-0">Fully-Tested:
-                                    Our equipment comes from data center refreshes, cloud moves and trade-ins and is
-                                    already in great shape. We fully test all equipment on the way in, and then test it
-                                    again prior to shipment, so you can count on your purchase to 'just work', every
-                                    time!</p>
-                            </div>
-                        </div>
-                        <div class="d-flex gap-1 mb-2">
-                            <img src="./assets/products-icon-1.svg" class="d-block" width="34" height="33"
-                                alt="products-icon">
-                            <div>
-                                <span class="d-block fs-18 font-neueplak-semibold">Fully-Tested:</span>
-                                <p class="mb-0">Fully-Tested:
-                                    Our equipment comes from data center refreshes, cloud moves and trade-ins and is
-                                    already in great shape. We fully test all equipment on the way in, and then test it
-                                    again prior to shipment, so you can count on your purchase to 'just work', every
-                                    time!</p>
-                            </div>
-                        </div>
-                        <div class="d-flex gap-1">
-                            <img src="./assets/products-icon-1.svg" class="d-block" width="34" height="33"
-                                alt="products-icon">
-                            <div>
-                                <span class="d-block fs-18 font-neueplak-semibold">Fully-Tested:</span>
-                                <p class="mb-0">Fully-Tested:
-                                    Our equipment comes from data center refreshes, cloud moves and trade-ins and is
-                                    already in great shape. We fully test all equipment on the way in, and then test it
-                                    again prior to shipment, so you can count on your purchase to 'just work', every
-                                    time!</p>
-                            </div>
+                        <div class="card">
+                            <h2 class="main-title mb-3">Sell Us Your Servers, Networking & Storage</h2>
+                            <p class="mb-0">Alta pays cash for your excess used server & IT equipment, either for
+                                purchase or trade-in. Our network of thousands of buyers allows us to offer top dollar
+                                for your data center equipment.</p>
+                            <p class="mb-0">We also offer ITAD services including data erasure/sanitization with full
+                                chain of custody.</p>
+                            <p class="mb-3">Alta is committed to quality, testing, environmental and health standards as
+                                well as responsible IT Asset disposition, data security & handling.</p>
+                            <a href="#" class="btn btn-primary d-block">Get a Free Quote</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 order-lg-1">
-                    <img style="max-width: 505px; border-radius: 8px;" src="./assets/products-img-4.webp"
-                        class="img-fluid mx-auto d-block" width="505" height="556" alt="products-image-3">
-                </div>
             </div>
         </div>
     </section>
-    <section class="excess-sec pb-0">
+    <section class="rackmount-sec pb-0">
         <div class="container">
-            <div style="background-color: var(--primary-light);" class="content-wrapper">
-                    <img style="max-width: 316px;" src="./assets/excess-img-left.webp" class="img-fluid excess-img excess-img-1"
-                        width="255" height="213" alt="products-image-3">
-                <div style="max-width: 590px;" class="mx-auto text-center">
-                    <h2 class="main-title">Contact Us</h2>
-                    <p>Need help sizing an upgrade? Bulk Order? Custom Configuration or compatibility questions? Our expert product managers and engineers are ready to help.</p>
-                    <p class="font-neueplak-semibold">Contact Us or Email</p>
-                    <a style="text-decoration: underline;" href="mailto:buyers@altatechnologies.com"
-                        class="btn btn-primary d-block mx-auto">buyers@altatechnologies.com</a>
+            <h2 class="main-title text-center mb-5">Lenovo Rackmount Server Models</h2>
+            <div class="row g-2 mb-5">
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
                 </div>
-                <img style="max-width: 187px;" src="./assets/excess-img-right.webp" class="img-fluid excess-img excess-img-2"
-                        width="187" height="253" alt="products-image-3">
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
+                </div>
+                <div class="col-6 col-lg-3">
+                    <a href="#" class="model-card d-block">
+                        <img src="./assets/rackmount-img.webp" class="img-fluid" width="255" height="119"
+                            alt="rackmount-image">
+                        <span style="color: black;" class="d-block text-center">Lenovo
+                            Thinkserver Rd220 2u Rackmount Server</span>
+                    </a>
+                </div>
+            </div>
+            <a href="#" class="d-block btn btn-primary mx-auto">Load More</a>
+        </div>
+    </section>
+    <section class="default-sec half-sec content-left spacification-sec">
+        <div class="container">
+            <div class="row gy-lg-0 gx-lg-5 gy-3 gx-0">
+                <div class="col-lg-6 order-lg-2">
+                    <div class="content-wrapper h-100 d-flex flex-column justify-content-center">
+                        <h2 class="main-title mb-2">Lenovo RS160 Specifications</h2>
+                        <p class="mb-0"><strong>Form factor:</strong> 1U rack-mount</p>
+                        <p class="mb-0"><strong>Processor:</strong> Intel Xeon processor E3-1200 v5 product family with
+                            four cores up to 3.7 GHz, 8 MB cache, and up to 2133 MHz memory speed; or Intel
+                            Core i3 processor 6100/6300 product families with two cores up to 3.9 GHz, up to 4 MB cache,
+                            and
+                            2133 MHz memory speed; or Intel Pentium processor G4400/G4500 product families with two
+                            cores up
+                            to 3.6 GHz, 3 MB cache, and up to 2133 MHz memory speed.</p>
+                        <p class="mb-0"><strong>Chipset:</strong> Intel C232</p>
+                        <p class="mb-0"><strong>Memory:</strong> Four DIMM sockets. Support for ECC UDIMMs. DIMM speeds
+                            up
+                            to 2133 MHz.</p>
+                        <p class="mb-0"><strong>Memory Capacity:</strong> Up to 64 GB with four 16 GB UDIMMs</p>
+                        <p class="mb-0"><strong>Power Supply:</strong> One fixed 300 W AC (100 - 240 V) power supply (80
+                            PLUS Gold)</p>
+                        <p class="mb-0"><strong>Optical Drive Bays:</strong> One. Support for DVD-ROM or DVD-RW</p>
+                        <p class="mb-0"><strong>I/O Expansion Slots:</strong> Up to one PCIe 3.0 x16 (x16
+                            wired) low-profile
+                            slot with an optional riser card</p>
+                        <p class="mb-0"><strong>Dimensions: Height:</strong> 43 mm (1.7 in.), Width: 439 mm (17.3 in.),
+                            Depth: 411 mm (16.2 in.)</p>
+                        <p class="mb-5"><strong>Weight:</strong> Minimum: 6.2 kg (13.7 lb); Maximum: 7.6 kg (16.8 lb)
+                        </p>
+                        <a href="#" class="btn btn-primary d-block">Get a Free Quote</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-1">
+                    <img src="./assets/spacification-img.webp" class="d-block img-fluid mx-auto"
+                        style="border-radius: 18px; max-width: 530px;" width="530" height="666"
+                        alt="spacification-image">
+                </div>
             </div>
         </div>
     </section>
-    <section class="business-sec">
+    <section style="background-color: var(--primary-light-2);" class="business-sec">
         <div class="container">
             <h2 class="main-title text-center mb-5">Why Business Rely on ALTA</h2>
             <div class="row g-2">
